chore(User): changing parameter
